force-app/main/default/objects/Contact/fields/hed__Mailing_Address_Inactive__c.field-meta.xml
<CustomField>
    <fullName>hed__Mailing_Address_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the mailing address for this Contact is inactive</description>
    <inlineHelpText>Indicates that the mailing address for this Contact is inactive</inlineHelpText>
    <label>Mailing Address Inactive</label>
    <type>Checkbox</type>
</CustomField>