force-app/main/default/objects/Contact/fields/hed__Military_Background__c.field-meta.xml
<CustomField>
    <fullName>hed__Military_Background__c</fullName>
    <description>Describe this person&apos;s military service, for example, the branch of the military, length of time in the military, date of discharge, etc.</description>
    <inlineHelpText>Describe this person&apos;s military service, for example, the branch of the military, length of time in the military, date of discharge, etc.</inlineHelpText>
    <label>Military Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>